Add support for editing clusters
